fixed cards gaps

--- a/src/styles/cards.scss
+++ b/src/styles/cards.scss
@@ -3,6 +3,6 @@
   margin: 0 auto;
   grid-template-columns: repeat(auto-fill, 200px );
   justify-content: center;
-  gap: 48px 50px;
+  gap: 50px 48px;
   max-width: 1024px;
 }
